[FIX] link on mobile are not well placed
Before this commit, on mobile in the Accounting app, the link in a
kanban card was not well placed.

After this commit, in mobile we consider a link as a block so he move
to the "next line"

Steps to reproduce:
* Open Odoo on Mobile
* Go to Accounting => Bug ("Create Manually" is in a strange position)

Task ID : 2200168 (4.a)

--- a/addons/web/static/src/scss/kanban_dashboard.scss
+++ b/addons/web/static/src/scss/kanban_dashboard.scss
@@ -174,6 +174,13 @@
                 @include o-text-overflow(inline-block);
             }
 
+            @include media-breakpoint-down(md) {
+                & button + span, & button + a {
+                    display: block;
+                    margin-top: 1rem; /* bootstrap mt-3 */
+                }
+            }
+
             .o_kanban_primary_bottom {
                 margin-top: $o-kanban-dashboard-vpadding;
                 margin-bottom: -$o-kanban-dashboard-vpadding;
